[workspace]
members = [
    "dpedal_flash",
    "dpedal_config"
]
exclude = [
    "dpedal_firmware",
]
resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true

[profile.dev]
opt-level = "z"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.0"
# CI backends to support
ci = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    # TODO: Build broken on macos, need to investigate
    #"aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc"
]
# Extra static files to include in each App (path relative to this Cargo.toml's dir)
include = ["example-config.kdl"]
# The installers to generate for each app
installers = []
# Which actions to run on pull requests
pr-run-mode = "plan"
# Skip checking whether the specified configuration files are up to date
allow-dirty = []

