[workspace]
members = [
    "dpedal_flash",
    "dpedal_config",
    "site"
]
exclude = [
    "dpedal_firmware",
]
resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true

[profile.dev]
opt-level = "z"

