[package]
name = "dpedal_config_web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"

# wasm
console_log = "1.0"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
webusb-web = "0.4.1"
postcard = "1.1.3"
dpedal_config = { path = "../dpedal_config"}
rkyv = "0.8.12"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'DomTokenList',
  'Headers',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Window',
  'Document'
]

[lib]
crate-type = ["cdylib"]
