[package]
name = "dpedal_config_web_app"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"

# wasm
console_log = "1.0"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
webusb-web = "0.4.1"
postcard = { version = "1.1.3", features = ["use-std"] }
dpedal_config = { path = "../dpedal_config"}
rkyv = { version = "0.8.10", default-features = false, features = ["arrayvec-0_7", "bytecheck", "alloc"], git = "https://github.com/rukai/rkyv", branch = "add_support_for_arraystring" }
arrayvec = "0.7"

# workaround https://gitlab.com/robigalia/ssmarshal/-/merge_requests/2
# TODO: lets just eradicate this unmaintained thing from the dep tree entirely
ssmarshal = { version = "1", features = ["std"]}
strum = { version = "0.27.2", default-features = false }
js-sys = "0.3.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'DomTokenList',
  'Headers',
  'HtmlCanvasElement',
  'HtmlCollection',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Node',
  'NodeList',
  'Window',
  'Document',
  'CssStyleDeclaration'
]

[lib]
crate-type = ["cdylib"]
