[package]
name = "dpedal_firmware"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/rukai/DPedal"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32f072", "stm32-usbd"] }
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"]}
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-halt = "0.2.0"
keyberon = { git = "https://github.com/TeXitoi/keyberon", rev = "285f01fadc70b2809190d7fde34acb16499e0a4c" }
cortex-m-rtic = "1.0.0"
embedded-hal = "0.2"
usb-device = "0.2.0"
nb = "1.0.0"
once_cell = { version = "1.17.0", default-features = false, features = ["critical-section"] }
usbd-human-interface-device = "0.4.4"
frunk = { version = "0.4.2", default-features = false }
