[package]
name = "dpedal_firmware"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/rukai/DPedal"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1"
defmt-rtt = "1"

embassy-futures = "0.1.2"
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
usbd-hid = "0.8.0"
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
static_cell = "2.1.1"
rkyv = { version = "0.8.10", default-features = false }
dpedal_config = { path = "../dpedal_config"}

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true
