[package]
name = "dpedalflash"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/rukai/DPedal"
default-run = "dpedalflash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dfu-libusb = "0.5.0"
enum-utils = "0.1.2"
goblin = "0.9.0"
indicatif = "0.17.3"
keyberon = "0.1.1"
knuffel = "3.0.0"
miette = { version = "5.5.0", features = ["fancy"] }
rusb = "0.9.1"
dpedal_firmware = { path = "../dpedal_firmware", artifact = "bin", target = "thumbv6m-none-eabi" }
