[package]
name = "dpedal_flash"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/rukai/dpedal"

[dependencies]
picoboot-rs = "0.2.0"
rusb = "0.9.4"
uf2-decode = "0.2.0"
dpedal_firmware = { path = "../dpedal_firmware", artifact = "bin", target = "thumbv6m-none-eabi" }
goblin = "0.9.3"
miette = { version = "7.4.0", features = ["fancy"] }
dpedal_config = { path = "../dpedal_config" }
kdl = "6.3.3"
kdl_config_derive = { path = "../kdl_config_derive" }
kdl_config = { path = "../kdl_config" }
arrayvec = "0.7.6"
rkyv = "0.8.10"
