[package]
name = "dpedal_flash"
version = "0.0.5"
edition = "2024"
repository = "https://github.com/rukai/dpedal"

[dependencies]
picoboot-rs = "0.2.0"
rusb = "0.9.4"
uf2-decode = "0.2.0"
# Use once bindeps is stabilized
#dpedal_firmware = { path = "../dpedal_firmware", artifact = "bin", target = "thumbv6m-none-eabi" }
goblin = "0.9.3"
miette = { version = "7.4.0", features = ["fancy"] }
dpedal_config = { path = "../dpedal_config" }
kdl = "6.3.3"
kdl_config = { git = "https://github.com/rukai/kdl_config" }
kdl_config_derive = { git = "https://github.com/rukai/kdl_config" }
arrayvec = "0.7.6"
rkyv = { workspace = true, features = ["alloc"] }

# workaround https://gitlab.com/robigalia/ssmarshal/-/merge_requests/2
# TODO: lets just eradicate this unmaintained thing from the dep tree entirely
ssmarshal = { version = "1", features = ["std"]}
clap = { version = "4.5.53", features = ["derive"] }
