[package]
name = "dpedal_flasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dfu-libusb = "0.3.1"
enum-utils = "0.1.2"
goblin = "0.6.0"
indicatif = "0.17.3"
keyberon = "0.1.1"
#knuffel = "2.0.0"
knuffel = { version = "2.0.0", git = "https://github.com/rnarkk/knuffel" }
miette = { version = "5.5.0", features = ["fancy"] }
rusb = "0.9.1"
