[package]
name = "site"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
askama = { version = "0.14", default-features = false, features = ["std", "derive"] }
clap = { version = "4.5.53", features = ["derive"] }
devserver_lib = { version = "0.4.2", default-features = false }
