[package]
name = "site"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
askama = { version = "0.14", default-features = false, features = ["std", "derive"] }
clap = { version = "4.5.53", features = ["derive"] }

# test web server
axum = "0.8.1"
tower-http = { version = "0.6.0", features = ["fs"] }
tokio = { version = "1.35.1", features = ["full"] }
flate2 = "1.1.5"
wasm-bindgen-cli-support = "0.2.106"
